--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
-  <title>Contador</title>
+  <title>Counter</title>
 </head>
 <body>
   <article class="clock" id="clock">
-    <h3>Contador com Javascript!</h3>
+    <h3>Counter with Javascript!</h3>
     <div class="count">
       <div id="timer"></div>
     </div>
